// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`main > generates on file add 1`] = `
"/** Internal type. DO NOT USE DIRECTLY. */
type Exact<T extends { [key: string]: unknown }> = { [K in keyof T]: T[K] };
/** Internal type. DO NOT USE DIRECTLY. */
export type Incremental<T> = T | { [P in keyof T]?: P extends ' $fragmentName' | '__typename' ? T[P] : never };
export type Maybe<T> = T | null;
export type InputMaybe<T> = Maybe<T>;
/** All built-in and custom scalars, mapped to their actual values */
export type Scalars = {
  ID: { input: string; output: string; }
  String: { input: string; output: string; }
  Boolean: { input: boolean; output: boolean; }
  Int: { input: number; output: number; }
  Float: { input: number; output: number; }
};

export type Query = {
  __typename?: 'Query';
  bar?: Maybe<Scalars['Int']['output']>;
  foo?: Maybe<Scalars['String']['output']>;
};

export type BarQueryVariables = Exact<{ [key: string]: never; }>;


export type BarQuery = { bar: number | null };

export type FooQueryVariables = Exact<{ [key: string]: never; }>;


export type FooQuery = { foo: string | null };
"
`;

exports[`main > generates on file change 1`] = `
"/** Internal type. DO NOT USE DIRECTLY. */
type Exact<T extends { [key: string]: unknown }> = { [K in keyof T]: T[K] };
/** Internal type. DO NOT USE DIRECTLY. */
export type Incremental<T> = T | { [P in keyof T]?: P extends ' $fragmentName' | '__typename' ? T[P] : never };
export type Maybe<T> = T | null;
export type InputMaybe<T> = Maybe<T>;
/** All built-in and custom scalars, mapped to their actual values */
export type Scalars = {
  ID: { input: string; output: string; }
  String: { input: string; output: string; }
  Boolean: { input: boolean; output: boolean; }
  Int: { input: number; output: number; }
  Float: { input: number; output: number; }
};

export type Query = {
  __typename?: 'Query';
  bar?: Maybe<Scalars['Int']['output']>;
  foo?: Maybe<Scalars['String']['output']>;
};

export type BarQueryVariables = Exact<{ [key: string]: never; }>;


export type BarQuery = { bar: number | null };

export type FooQueryVariables = Exact<{ [key: string]: never; }>;


export type FooQuery = { foo: string | null, bar: number | null };
"
`;

exports[`main > generates on server start 1`] = `
"/** Internal type. DO NOT USE DIRECTLY. */
type Exact<T extends { [key: string]: unknown }> = { [K in keyof T]: T[K] };
/** Internal type. DO NOT USE DIRECTLY. */
export type Incremental<T> = T | { [P in keyof T]?: P extends ' $fragmentName' | '__typename' ? T[P] : never };
export type Maybe<T> = T | null;
export type InputMaybe<T> = Maybe<T>;
/** All built-in and custom scalars, mapped to their actual values */
export type Scalars = {
  ID: { input: string; output: string; }
  String: { input: string; output: string; }
  Boolean: { input: boolean; output: boolean; }
  Int: { input: number; output: number; }
  Float: { input: number; output: number; }
};

export type Query = {
  __typename?: 'Query';
  bar?: Maybe<Scalars['Int']['output']>;
  foo?: Maybe<Scalars['String']['output']>;
};

export type FooQueryVariables = Exact<{ [key: string]: never; }>;


export type FooQuery = { foo: string | null };
"
`;
